[package]
name = "macro_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "*", features=["full"]}
quote = "*"
rand = {version = "0.8", features=["small_rng"]}
lazy_static = "1.4"

[lib]
proc-macro = true
